# daily_briefing

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  check_titles.py  create_user.py  debug_audio.py  docker-compose.dev.yml  docker-compose.yml  nixpacks.toml  pyproject.toml  start_emails.sh  test_feed_audio.py
.claude/: settings.local.json
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
config/: senders copy.json  senders.json
docs/: gmail_oauth.md  gmail_setup.md  prd.md
specs/001-zotero-api-digest/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-newsletter-aggregator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-unified-feed-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-user-login/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-topic-exclusion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-newsletter-db-consolidation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-newsletter-audio/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-audio-playback-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-tts-fallback/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-senders-db-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/auth/: models.py  password.py  service.py  session.py
tests/: __init__.py  conftest.py
utils/: zotero_dedup.py
(+135 files in other folders)
